# Valeo-Auto-Analyzer

./: .gitattributes  .gitignore  README.md  __init__.py  auto_analysis.py  fileWithNo_code_switches  pyproject.tmol  setup.cfg  setup.py  test_auto_analysis.py
internals/c_files/: test.c
src/main_pkg/: __init__.py  auto_analysis.py
src/main_pkg/internals/c_files/: test.c
src/main_pkg/json_files/: checklist_sheet.json
tests/: long_term_memory.txt  test_auto_analysis.py
tests/input_files/reports/base-/RTRT/: Idp.html
tests/test_snippets/test_Find_report/expected/: expected1.txt
tests/test_snippets/test_get_code_comments_all/: code_1.c  expected_1.txt
tests/test_snippets/test_get_code_comments_stat/: expected_1.txt  expected_4.txt
tests/test_snippets/test_get_entries_QAC/test_input/: BswErrDeb.c.html  Idp.c.html  SftyTqMon.c.html  Test_input_4.txt
tests/test_snippets/test_get_entries_RTRT/expected/: dictionary_test1.txt  dictionary_test2.txt  dictionary_test3.txt
tests/test_snippets/test_get_entries_RTRT/test_input/: Exc.html  SftyTqMon.html  SftyTqMon_1.html
